--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "install": "cd client && npm install",
     "dev:client": "cd client && npm start",
     "preinstall": "cd server && npm install",
-    "dev:server": "cd server && npm start",
+    "dev:server": "cd server && npm run dev",
     "build":"cd client && npm run build",
     "start": "cd server && npm start"
   },
